# docsplice

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
recipes/: docstring.py
src/docsplice/: __init__.py  splice.py
tests/: test_splice.py
