[project]
name = "docsplice"
description = "Docstring splicing for python functions 🧬"
authors = [
    {name = "Hannes Breytenbach", email = "hannes@saao.ac.za"}
]
dynamic = ["version", "readme"]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Topic :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8"
]

[project.urls]
"Homepage" = "https://github.com/astromancer/docsplice"
"Bug Tracker" = "https://github.com/astromancer/docsplice/issues"

[project.optional-dependencies]
tests = ["pytest"]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools_scm[toml]>=3.4",
    "wheel",
    "six"
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
version = {attr = "docsplice._version.version"}

[tool.setuptools_scm]
write_to = "src/docsplice/_version.py"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38

[testenv]
# install testing framework
# ... or install anything else you might need here
deps = 
    -rrequirements.txt
    -rrequirements-dev.txt
# run the tests
# ... or run any other command line tool you need to run here
commands = pytest {posargs} # substitute with tox positional arguments
"""
