[metadata]
name = docsplice
author = Hannes Breytenbach
author_email = hannes@saao.ac.za
description = Docstring splicing for python functions 🧬
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/astromancer/docsplice
project_urls =
    Bug Tracker = https://github.com/astromancer/docsplice/issues
classifiers = 
    Topic :: Documentation
    Topic :: Software Development :: Libraries :: Python Modules
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
setup_requires =
  setuptools_scm


[options.packages.find]
where = src